# CryptoExchange

./: CMakeLists.txt  README.md
benchmarks/: benchmark_core.cpp  benchmark_strategies.cpp
config/: exchanges.yaml  risk.yaml  strategies.yaml  system.yaml
include/audit/: audit_logger.hpp
include/backtesting/: backtest_engine.hpp  data_feed.hpp  performance_analyzer.hpp  simulated_exchange.hpp
include/config/: config_manager.hpp  exchange_config.hpp  strategy_config.hpp
include/core/: checkpoint_manager.hpp  lock_free_queue.hpp  logger.hpp  memory_pool.hpp  thread_pool.hpp  timestamp.hpp  types.hpp
include/exchange/: binance.hpp  bitfinex.hpp  bybit.hpp  coinbase.hpp  deribit.hpp  exchange_base.hpp  exchange_factory.hpp  gateio.hpp  htx.hpp  kraken.hpp  kucoin.hpp  okx.hpp
include/market_data/: order_book_manager.hpp
include/monitoring/: metrics_collector.hpp
include/network/: connection_pool.hpp  rest_client.hpp  websocket_client.hpp
include/oms/: execution_engine.hpp  order.hpp  order_manager.hpp  position_manager.hpp
include/risk/: circuit_breaker.hpp  pnl_tracker.hpp  position_limits.hpp  risk_manager.hpp
include/strategies/: strategy_base.hpp
include/strategies/hft/: latency_arbitrage.hpp  momentum_ignition.hpp  order_flow_imbalance.hpp  statistical_arbitrage.hpp  triangular_arbitrage.hpp
include/strategies/market_making/: adaptive_market_maker.hpp  avellaneda_stoikov.hpp  basic_market_maker.hpp  grid_market_maker.hpp  inventory_market_maker.hpp
include/trading/: live_trading.hpp  paper_trading.hpp  trading_engine.hpp  trading_mode.hpp
include/utils/: crypto_utils.hpp  math_utils.hpp  string_utils.hpp
src/: main.cpp
src/audit/: audit_logger.cpp
src/backtesting/: backtest_engine.cpp  data_feed.cpp  performance_analyzer.cpp  simulated_exchange.cpp
src/config/: config_manager.cpp  exchange_config.cpp  strategy_config.cpp
src/core/: checkpoint_manager.cpp  lock_free_queue.cpp  logger.cpp  memory_pool.cpp  thread_pool.cpp  timestamp.cpp
src/exchange/: binance.cpp  bitfinex.cpp  bybit.cpp  coinbase.cpp  deribit.cpp  exchange_base.cpp  exchange_factory.cpp  gateio.cpp  htx.cpp  kraken.cpp  kucoin.cpp  okx.cpp
src/market_data/: order_book_manager.cpp
src/monitoring/: metrics_collector.cpp
src/network/: connection_pool.cpp  rest_client.cpp  websocket_client.cpp
src/oms/: execution_engine.cpp  order.cpp  order_manager.cpp  position_manager.cpp
src/risk/: circuit_breaker.cpp  pnl_tracker.cpp  position_limits.cpp  risk_manager.cpp
src/strategies/hft/: latency_arbitrage.cpp  momentum_ignition.cpp  order_flow_imbalance.cpp  statistical_arbitrage.cpp  triangular_arbitrage.cpp
src/strategies/market_making/: adaptive_market_maker.cpp  avellaneda_stoikov.cpp  basic_market_maker.cpp  grid_market_maker.cpp  inventory_market_maker.cpp
src/trading/: live_trading.cpp  paper_trading.cpp  trading_engine.cpp
src/utils/: crypto_utils.cpp  math_utils.cpp  string_utils.cpp
tests/: test_core.cpp  test_strategies.cpp
